feat: add new team members and update social links
- Add Jimmy and Reza to the leadership team with their images and GitHub links
- Update Twitter/X social media link from "DynamiaA61733" to "dynamia_ai"
- Fix formatting inconsistencies in team member objects
- Update blog post title spacing for consistency
- Fix minor typos in blog post headings and captions

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -34,11 +34,11 @@
   "home": {
     "hero": {
       "title": "开源，多元异构 GPU 共享、调度系统",
-      "subtitle": "提供灵活、可靠、按需、弹性的多元异构 GPU 虚拟化、调度、管理能力, 最大化提高 GPU 利用率",
+      "subtitle": "提供灵活、可靠、按需、弹性的多元异构 GPU 虚拟化、调度、管理能力，最大化提高 GPU 利用率",
       "chineseSlogan": "统一异构计算，提升资源效率"
     },
     "socialProof": {
-      "title": "全球领先AI实验室和企业的信任之选"
+      "title": "全球领先 AI 实验室和企业的信任之选"
     },
     "keyAdvantages": {
       "title": "为什么选择我们？",
@@ -52,8 +52,8 @@
           "description": "无缝管理多个集群和环境中的资源"
         },
         {
-          "title": "GPU加速管理",
-          "description": "最大化利用专用硬件处理AI、ML和HPC工作负载"
+          "title": "GPU 加速管理",
+          "description": "最大化利用专用硬件处理 AI、ML 和 HPC 工作负载"
         },
         {
           "title": "成本优化和自动扩展",
@@ -400,10 +400,10 @@
             ]
           },
           {
-            "name": "AI多集群管理",
+            "name": "AI 多集群管理",
             "features": [
               {
-                "name": "AI 算力集群生命周期管理(创建、扩容、更新、卸载)",
+                "name": "AI 算力集群生命周期管理 (创建、扩容、更新、卸载)",
                 "hamiStatus": false,
                 "kantaloupeStatus": true
               },
@@ -594,7 +594,7 @@
       "submitting": "处理中...",
       "submitButton": "申请试用",
       "submitSuccess": "谢谢！您的试用请求已提交。我们的团队将很快与您联系，提供后续步骤。",
-      "submitError": "提交请求时发生错误。请重试或直接通过info@dynamia.ai与我们联系。"
+      "submitError": "提交请求时发生错误。请重试或直接通过 info@dynamia.ai 与我们联系。"
     },
     "disclaimer": "试用结束后，您可以选择升级到付费计划或取消账户。无需信用卡。"
   },
@@ -619,10 +619,10 @@
       "message": "您希望在演示中了解什么？",
       "submitting": "发送请求中...",
       "submitButton": "申请演示",
-      "submitSuccess": "谢谢！我们已收到您的演示请求。我们的团队将在24小时内联系您安排个性化演示。",
-      "submitError": "提交请求时发生错误。请重试或直接通过info@dynamia.ai与我们联系。"
+      "submitSuccess": "谢谢！我们已收到您的演示请求。我们的团队将在 24 小时内联系您安排个性化演示。",
+      "submitError": "提交请求时发生错误。请重试或直接通过 info@dynamia.ai 与我们联系。"
     },
-    "followUp": "提交请求后，我们的团队将在24小时内联系您安排演示。"
+    "followUp": "提交请求后，我们的团队将在 24 小时内联系您安排演示。"
   },
   "resources": {
     "title": "资源中心",
@@ -647,7 +647,7 @@
         "shareTitle": "分享这篇文章",
         "shareAt": "分享到：",
         "tipLabel": "提示",
-        "tip": "AI将帮助您总结要点并分析技术细节。",
+        "tip": "AI 将帮助您总结要点并分析技术细节。",
         "aiPrompt": "请访问这个链接并为我总结这篇文章：{{url}}",
         "aiTools": {
           "chatgpt": {
@@ -731,8 +731,8 @@
       },
       "mission": {
         "title": "我们的使命",
-        "description1": "在dynamia ai，我们致力于通过创新的异构计算解决方案帮助组织最大化其计算资源的价值。我们相信，通过智能管理和优化计算资源，我们可以加速科学发现，推动技术创新，并为全球各行业的客户创造价值。",
-        "description2": "我们的旗舰产品kantaloupe是一个统一的异构计算平台，专为应对当今最复杂的计算挑战而设计。无论是AI训练、高性能计算还是边缘计算，kantaloupe都能提供无与伦比的资源效率和性能优化。"
+        "description1": "在 dynamia ai，我们致力于通过创新的异构计算解决方案帮助组织最大化其计算资源的价值。我们相信，通过智能管理和优化计算资源，我们可以加速科学发现，推动技术创新，并为全球各行业的客户创造价值。",
+        "description2": "我们的旗舰产品 kantaloupe 是一个统一的异构计算平台，专为应对当今最复杂的计算挑战而设计。无论是 AI 训练、高性能计算还是边缘计算，kantaloupe 都能提供无与伦比的资源效率和性能优化。"
       },
       "vision": {
         "title": "公司愿景",
@@ -749,7 +749,9 @@
         { "name": "张潇", "position": "CEO & 创始人 & HAMi 核心维护者", "image": "CEO" },
         { "name": "李孟轩", "position": "首席架构师 & 联合创始人 & HAMi 项目创始人", "image": "CTO" },
         { "name": "尹玉", "position": "产品负责人 & HAMi 核心维护者", "image": "COO" },
-        { "name": "陈文", "position": "技术负责人", "image": "CPO" }
+        { "name": "陈文", "position": "技术负责人", "image": "CPO" },
+        { "name": "宋净超", "position": "开源生态 VP", "image": "jimmy" },
+        { "name": "Reza Jelveh", "position": "全球生态系统首席架构师", "image": "reza" }
       ]
     },
     "careers": {
@@ -777,7 +779,7 @@
       "submitting": "发送中...",
       "submitButton": "发送",
       "submitSuccess": "感谢您的留言！我们将尽快回复您。",
-      "submitError": "发送消息时出现错误。请重试或直接发送邮件至info@dynamia.ai。",
+      "submitError": "发送消息时出现错误。请重试或直接发送邮件至 info@dynamia.ai。",
       "social": {
         "email": {
           "title": "邮件",
@@ -818,8 +820,8 @@
   },
   "privacyPolicy": {
     "title": "隐私政策",
-    "lastUpdated": "最后更新：2025年3月3日",
-    "intro": "DYNAMIA INTELLIGENCE PTE. LTD.（以下简称\"我们\"）是网站https://dynamia.ai/（\"本网站\"）的运营者。本页详细说明了我们关于收集、使用和披露本网站用户个人信息的政策。",
+    "lastUpdated": "最后更新：2025 年 3 月 3 日",
+    "intro": "DYNAMIA INTELLIGENCE PTE. LTD.（以下简称\"我们\"）是网站 https://dynamia.ai/（\"本网站\"）的运营者。本页详细说明了我们关于收集、使用和披露本网站用户个人信息的政策。",
     "consent": "我们仅将您的个人信息用于提供和改进本网站的目的。使用本网站即表示您同意按照本政策收集和使用信息。",
     "sections": [
       {
@@ -836,7 +838,7 @@
       },
       {
         "title": "Cookie",
-        "content": "Cookie是可能包含匿名唯一标识符的小数据文件。它们从网站发送到您的浏览器并存储在您的计算机硬盘上。与许多网站一样，我们使用\"Cookie\"来收集信息。您可以配置浏览器拒绝所有 Cookie 或在发送 Cookie 时提醒您。然而，如果您选择不接受 Cookie，可能会在访问和使用我们网站的某些部分时遇到困难。"
+        "content": "Cookie 是可能包含匿名唯一标识符的小数据文件。它们从网站发送到您的浏览器并存储在您的计算机硬盘上。与许多网站一样，我们使用\"Cookie\"来收集信息。您可以配置浏览器拒绝所有 Cookie 或在发送 Cookie 时提醒您。然而，如果您选择不接受 Cookie，可能会在访问和使用我们网站的某些部分时遇到困难。"
       },
       {
         "title": "安全",
@@ -844,17 +846,17 @@
       },
       {
         "title": "本隐私政策的变更",
-        "content": "本隐私政策自2025年3月3日起生效，并将保持有效，除非其条款将来有任何变更。此类变更将在发布到此页面后立即生效。我们保留随时更新或修改我们隐私政策的权利。建议您定期查看本隐私政策。在我们在此页面上发布任何对隐私政策的修改后继续使用服务，将表示您认可这些变更并同意遵守和受修订后的隐私政策约束。如果我们对本隐私政策进行任何重大更改，我们将通过您提供给我们的电子邮件地址通知您，或在我们的网站上放置醒目通知。"
+        "content": "本隐私政策自 2025 年 3 月 3 日起生效，并将保持有效，除非其条款将来有任何变更。此类变更将在发布到此页面后立即生效。我们保留随时更新或修改我们隐私政策的权利。建议您定期查看本隐私政策。在我们在此页面上发布任何对隐私政策的修改后继续使用服务，将表示您认可这些变更并同意遵守和受修订后的隐私政策约束。如果我们对本隐私政策进行任何重大更改，我们将通过您提供给我们的电子邮件地址通知您，或在我们的网站上放置醒目通知。"
       },
       {
         "title": "联系我们",
-        "content": "如果您对本隐私政策有任何疑问，请通过info@dynamia.ai与我们联系。"
+        "content": "如果您对本隐私政策有任何疑问，请通过 info@dynamia.ai 与我们联系。"
       }
     ]
   },
   "cookiesPolicy": {
     "title": "Cookie 政策",
-    "lastUpdated": "最后更新：2025年3月3日",
+    "lastUpdated": "最后更新：2025 年 3 月 3 日",
     "intro": "当您访问或使用我们的网站或应用程序（统称为\"服务\"），或与我们的内容互动时，我们会使用（并授权第三方使用）网络信标、Cookie、像素标签、脚本、标签、API 和其他技术（统称为\"跟踪技术\"）。\n\n这些跟踪技术使我们能够自动收集关于您、您的在线行为和您的设备（如计算机或移动设备）的信息。这些信息用于增强您在我们服务上的导航体验，改进服务性能，并定制您的体验。我们还使用这些数据收集服务使用统计信息，进行分析，提供符合您兴趣的内容，并为我们的用户、广告商、发布商、客户和合作伙伴管理服务。\n\n此外，我们允许第三方通过跟踪技术收集关于您的信息。",
     "sections": [
       {
@@ -871,11 +873,11 @@
       },
       {
         "title": "关于 Cookie 的选择",
-        "content": "如果您想限制或阻止 Cookie \"帮助\"功能应该会告诉您如何操作。或者，您可以访问www.aboutcookies.org，其中包含有关如何在各种浏览器上限制或阻止 Cookie 的综合信息。您还可以通过首次访问我们网站时出现的 Cookie 同意横幅管理您的 Cookie 偏好。"
+        "content": "如果您想限制或阻止 Cookie \"帮助\"功能应该会告诉您如何操作。或者，您可以访问 www.aboutcookies.org，其中包含有关如何在各种浏览器上限制或阻止 Cookie 的综合信息。您还可以通过首次访问我们网站时出现的 Cookie 同意横幅管理您的 Cookie 偏好。"
       },
       {
         "title": "对我们 Cookie 政策的更改",
-        "content": "我们可能会不时更新我们的 Cookie 政策。对我们 Cookie 政策的更改将在此页面上更新。我们鼓励用户经常查看此页面以了解任何变更。我们Cookie政策的最后更新日期在政策顶部注明。"
+        "content": "我们可能会不时更新我们的 Cookie 政策。对我们 Cookie 政策的更改将在此页面上更新。我们鼓励用户经常查看此页面以了解任何变更。我们 Cookie 政策的最后更新日期在政策顶部注明。"
       },
       {
         "title": "联系我们",
@@ -908,39 +910,39 @@
       "company": "公司",
       "jobTitle": "职位",
       "nodeCount": "节点数量",
-      "gpuCount": "GPU数量",
+      "gpuCount": "GPU 数量",
       "message": "留言（可选）",
       "submitButton": "获取定价",
       "submitting": "提交中...",
       "submitSuccess": "感谢您的提交！我们的团队将很快与您联系，提供定价信息。",
       "submitError": "提交请求时发生错误。请重试或直接联系我们：info@dynamia.ai。",
       "nodeCountOptions": {
-        "small": "少于10个",
-        "medium": "10-50个",
-        "large": "50-200个",
-        "enterprise": "超过200个"
+        "small": "少于 10 个",
+        "medium": "10-50 个",
+        "large": "50-200 个",
+        "enterprise": "超过 200 个"
       },
       "gpuCountOptions": {
-        "small": "1-10个",
-        "medium": "10-50个",
-        "large": "50-200个",
-        "enterprise": "超过200个"
+        "small": "1-10 个",
+        "medium": "10-50 个",
+        "large": "50-200 个",
+        "enterprise": "超过 200 个"
       }
     },
     "trustedBy": {
       "title": "行业领导者的信赖选择",
-      "description": "各行业的领先组织都依靠Kantaloupe高效管理其异构计算资源。"
+      "description": "各行业的领先组织都依靠 Kantaloupe 高效管理其异构计算资源。"
     }
   },
   "cases": {
     "telecomGpu": {
-      "title": "电信运营商GPU虚拟化案例研究",
-      "subtitle": "某领先电信运营商如何利用HAMi实现GPU虚拟化与异构设备管理",
+      "title": "电信运营商 GPU 虚拟化案例研究",
+      "subtitle": "某领先电信运营商如何利用 HAMi 实现 GPU 虚拟化与异构设备管理",
       "overview": {
         "title": "客户概述",
-        "description": "亚洲某大型电信运营商面临着网络运营、客户服务系统和增值服务中对AI/ML能力日益增长的需求。该公司拥有超过2亿用户，业务遍及多个地区，需要一种高效的方式来管理其不断扩展的GPU基础设施。",
+        "description": "亚洲某大型电信运营商面临着网络运营、客户服务系统和增值服务中对 AI/ML 能力日益增长的需求。该公司拥有超过 2 亿用户，业务遍及多个地区，需要一种高效的方式来管理其不断扩展的 GPU 基础设施。",
         "keyPoints": [
-          "大规模GPU资源池",
+          "大规模 GPU 资源池",
           "多租户隔离",
           "高性能与低延迟"
         ]
@@ -949,16 +951,16 @@
         "title": "挑战与解决方案",
         "subtitle": "关键挑战",
         "points": [
-          "GPU资源利用率低（低于30%）",
+          "GPU 资源利用率低（低于 30%）",
           "多个孤立集群的管理复杂性",
           "工作负载需求波动",
           "硬件采购成本高"
         ]
       },
       "solution": {
-        "subtitle": "HAMi解决方案",
+        "subtitle": "HAMi 解决方案",
         "points": [
-          "细粒度GPU共享与虚拟化",
+          "细粒度 GPU 共享与虚拟化",
           "统一集群管理界面",
           "智能工作负载调度",
           "硬件加速隔离"
@@ -966,7 +968,7 @@
       },
       "architecture": {
         "title": "实施架构",
-        "description": "HAMi解决方案提供了全面的虚拟化层，实现了异构GPU资源的统一管理，优化了调度和资源分配。"
+        "description": "HAMi 解决方案提供了全面的虚拟化层，实现了异构 GPU 资源的统一管理，优化了调度和资源分配。"
       },
       "results": {
         "title": "成果与收益",
@@ -974,7 +976,7 @@
           {
             "title": "资源利用率提升",
             "value": "80%",
-            "description": "GPU资源利用率显著提高"
+            "description": "GPU 资源利用率显著提高"
           },
           {
             "title": "成本降低",
@@ -989,8 +991,8 @@
         ]
       },
       "cta": {
-        "title": "变革您的GPU基础设施",
-        "description": "了解HAMi如何帮助您的组织通过高效的GPU虚拟化和异构计算管理实现类似的成果。",
+        "title": "变革您的 GPU 基础设施",
+        "description": "了解 HAMi 如何帮助您的组织通过高效的 GPU 虚拟化和异构计算管理实现类似的成果。",
         "button": "联系我们"
       }
     },
@@ -1034,7 +1036,7 @@
           },
           {
             "title": "弹性资源超配",
-            "description": "引入显存和算力的双维度超分技术（如高达200%的显存超分比），结合优先级调度，进一步压榨 GPU 潜力，在保障高优先级任务 QoS 的前提下运行更多任务。"
+            "description": "引入显存和算力的双维度超分技术（如高达 200% 的显存超分比），结合优先级调度，进一步压榨 GPU 潜力，在保障高优先级任务 QoS 的前提下运行更多任务。"
           },
           {
             "title": "统一管理与调度",
@@ -1110,14 +1112,14 @@
     },
     "prepEduHami": {
       "title": "PREP EDU × HAMi｜异构 GPU 智能调度，全面提升 AI 服务效率",
-      "subtitle": "探索PREP EDU 基于 HAMi，在 Kubernetes（RKE2）生产环境实现异构 GPU 虚拟化与智能调度，解决了多型号显卡利用率低、显存冲突、资源隔离不足等痛点。HAMi 的 vGPU 精细化分配、GPU 类型感知调度、透明设备虚拟化与 Prometheus 监控体系，帮助PREP EDU 在大规模 AI 推理场景中显著提升资源利用率与运维效率。",
+      "subtitle": "探索 PREP EDU 基于 HAMi，在 Kubernetes（RKE2）生产环境实现异构 GPU 虚拟化与智能调度，解决了多型号显卡利用率低、显存冲突、资源隔离不足等痛点。HAMi 的 vGPU 精细化分配、GPU 类型感知调度、透明设备虚拟化与 Prometheus 监控体系，帮助 PREP EDU 在大规模 AI 推理场景中显著提升资源利用率与运维效率。",
       "overview": {
         "title": "公司概述",
         "description": "PREP EDU 是东南亚增长迅速的教育科技公司，专注于以人工智能重塑语言学习与考试备考体验。",
         "keyPoints": [
           "AI 驱动的跨境考试备考服务领航者",
           "专注 AI 个性化学习场景的技术落地与体验优化",
-          "致力于AI 教学场景下的算力管理痛点",
+          "致力于 AI 教学场景下的算力管理痛点",
           "注重开源技术教学与科研实践的融合"
         ]
       },
