--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -717,7 +717,9 @@
         { "name": "Xiao Zhang", "position": "CEO & Founder & HAMi Maintainer", "image": "CEO" },
         { "name": "Mengxuan Li", "position": "Chief Architect & Co-founder & HAMi Maintainer", "image": "CTO" },
         { "name": "Yu Yin", "position": "Product Leader & HAMi Maintainer", "image": "COO" },
-        { "name": "Wen Chen", "position": "Tech Leader", "image": "CPO" }
+        { "name": "Wen Chen", "position": "Tech Leader", "image": "CPO" },
+        { "name": "Jimmy Song", "position": "VP of Open Source Ecosystem", "image": "jimmy" },
+        { "name": "Reza Jelveh", "position": "Principal Global Ecosystem Field Architect", "image": "reza" }
       ]
     },
     "careers": {
