fix(i18n): update Reza Jelveh's position to Head of Global Marketing
- Changed Reza Jelveh's position from "Principal Global Ecosystem Field Architect" to "Head of Global Marketing" in the English locale file to reflect the updated role and title.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -719,7 +719,7 @@
         { "name": "Yu Yin", "position": "Product Leader & HAMi Maintainer", "image": "COO" },
         { "name": "Wen Chen", "position": "Tech Leader", "image": "CPO" },
         { "name": "Jimmy Song", "position": "VP of Open Source Ecosystem", "image": "jimmy" },
-        { "name": "Reza Jelveh", "position": "Principal Global Ecosystem Field Architect", "image": "reza" }
+        { "name": "Reza Jelveh", "position": "Head of Global Marketing", "image": "reza" }
       ]
     },
     "careers": {
