feat(case-studies): move case pages from blog and add redirects
Extract case study pages from `/blog/*` into dedicated reusable `case-studies` components and add new route pages under `/case-studies` (including Chinese variants).

Update `next.config.mjs` with permanent redirects from old blog case-study URLs to the new paths to preserve existing links and SEO value.

Adjust sitemap priority/changefreq logic so `/case-studies` routes (and localized equivalents) are indexed with the same medium-high priority as blog/resources content.feat(case-studies): move case pages from blog and add redirects

Extract case study pages from `/blog/*` into dedicated reusable `case-studies` components and add new route pages under `/case-studies` (including Chinese variants).

Update `next.config.mjs` with permanent redirects from old blog case-study URLs to the new paths to preserve existing links and SEO value.

Adjust sitemap priority/changefreq logic so `/case-studies` routes (and localized equivalents) are indexed with the same medium-high priority as blog/resources content.

Signed-off-by: Jimmy Song <rootsongjc@gmail.com>

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -860,6 +860,16 @@
       "description": "Leading organizations across various industries rely on Kantaloupe to manage their heterogeneous computing resources efficiently."
     }
   },
+  "caseStudiesPage": {
+    "title": "Case Studies",
+    "subtitle": "See how teams scale AI, HPC, and inference workloads with HAMi and heterogeneous GPU scheduling.",
+    "cardButton": "Read case study",
+    "cta": {
+      "title": "Ready to build your own success story?",
+      "description": "Talk with our team about how HAMi can improve utilization, stability, and cost efficiency in your GPU infrastructure.",
+      "button": "Request a Demo"
+    }
+  },
   "cases": {
     "telecomGpu": {
       "title": "Telecom Provider GPU Virtualization Case Study",
