feat(case-studies): add localized case-study title prefixes
Prefix case study titles across EN and ZH pages to improve context and SEO consistency.
Updated `metadata.title` and `openGraph.title` to include:

- EN: `Case Study | ...`
- ZH: `客户案例｜...`

Also added the localized `caseStudiesPage.h1Prefix` before case study `<h1>` titles in case study components so on-page headings match metadata branding.feat(case-studies): add localized case-study title prefixes

Prefix case study titles across EN and ZH pages to improve context and SEO consistency.
Updated `metadata.title` and `openGraph.title` to include:

- EN: `Case Study | ...`
- ZH: `客户案例｜...`

Also added the localized `caseStudiesPage.h1Prefix` before case study `<h1>` titles in case study components so on-page headings match metadata branding.

Signed-off-by: Jimmy Song <rootsongjc@gmail.com>

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,6 +11,7 @@
     "community": "Community",
     "communityDesc": "Join the HAMi user community to share experiences and get help",
     "products": "Products",
+    "caseStudies": "Case Studies",
     "solutions": "Solutions",
     "pricing": "Pricing",
     "resources": "Resources",
@@ -863,6 +864,7 @@
   "caseStudiesPage": {
     "title": "Case Studies",
     "subtitle": "See how teams scale AI, HPC, and inference workloads with HAMi and heterogeneous GPU scheduling.",
+    "h1Prefix": "Case Study | ",
     "cardButton": "Read case study",
     "cta": {
       "title": "Ready to build your own success story?",
